fix: display claim btn on mobile

--- a/frontend/src/styles/ConnectBtn.module.css
+++ b/frontend/src/styles/ConnectBtn.module.css
@@ -6,7 +6,7 @@
     display: flex;
     color: var(--light-gray);
     cursor: pointer;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     padding: 1rem;
 }
 
@@ -22,8 +22,8 @@
 @media (min-width: 768px) {
     .connectBtn {
         border-radius: 40px;
-        width: 280px;
-        padding: 1rem 1.5rem;
+        width: 260px;
+        height: 54px;
         display: flex;
         align-items: center;
         justify-content: center;
