--- a/frontend/src/styles/CreateBtn.module.css
+++ b/frontend/src/styles/CreateBtn.module.css
@@ -6,7 +6,7 @@
     display: flex;
     color: var(--light-gray);
     cursor: pointer;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     padding: 1rem;
 }
 
@@ -23,7 +23,7 @@
     .createBtn {
         border-radius: 40px;
         width: 240px;
-        padding: 0.75rem 1.5rem;
+        height: 54px;
         display: flex;
         align-items: center;
         justify-content: center;
